# DMS

./: CMakeLists.txt  License.txt  README.en.md  README.md  config.h.in
src/: CMakeLists.txt
src/cmpt/: cmpt_msg_cmd.h  cmpt_msg_common.h  cmpt_msg_drm.h  cmpt_msg_lock.h  cmpt_msg_mesi.h  cmpt_msg_misc.h  cmpt_msg_pcr.h  cmpt_msg_reform.h  cmpt_msg_tran.h  cmpt_msg_version.h  cmpt_reform_proc.c  cmpt_reform_proc.h  cmpt_reform_step.h
src/common/: dms_cm.c  dms_cm.h  dms_error.c  dms_error.h  dms_log.c  dms_log.h  dms_mfc.c  dms_mfc.h
src/dcs/: dcs_ckpt.c  dcs_ckpt.h  dcs_cr_page.c  dcs_cr_page.h  dcs_dc.c  dcs_dc.h  dcs_msg.c  dcs_msg.h  dcs_page.c  dcs_page.h  dcs_page_v2.c  dcs_smon.c  dcs_smon.h  dcs_tran.c  dcs_tran.h
src/dls/: dls_latch.c  dls_msg.c  dls_msg.h  dls_spinlock.c
src/dms/: dms_dynamic_trace.c  dms_dynamic_trace.h  dms_info.c  dms_msg.c  dms_msg.h  dms_msg_command.h  dms_msg_protocol.h  dms_process.c  dms_process.h  dms_smon.c  dms_smon.h  dms_stat.c  dms_stat.h
src/drc/: drc.h  drc_lock.c  drc_lock.h  drc_page.c  drc_page.h  drc_res_mgr.c  drc_res_mgr.h  drc_tran.c  drc_tran.h  drm.c  drm.h
src/fi/: fault_injection.c  fault_injection.h
src/interface/: dms.h  dms_api.h  dms_errno.h  dms_error.h
src/ock/: scrlock.h  scrlock_adapter.c  scrlock_adapter.h
src/param/: dms_param.c  dms_param.h
src/patch_demo/: CMakeLists.txt  patch.c
src/rc/: dms_reform.c  dms_reform.h  dms_reform_alock.c  dms_reform_alock.h  dms_reform_cm_res.c  dms_reform_cm_res.h  dms_reform_drc_clean.c  dms_reform_drc_migrate.c  dms_reform_drc_rebuild.c  dms_reform_drc_repair.c  dms_reform_fault_inject.c  dms_reform_fault_inject.h  dms_reform_flush_copy.c  dms_reform_health.c  dms_reform_health.h  dms_reform_judge.c  dms_reform_judge.h  dms_reform_judge_stat.c  dms_reform_judge_stat.h  dms_reform_judge_step.c  dms_reform_judge_step.h  dms_reform_judge_switch.c  dms_reform_judge_switch.h  dms_reform_msg.c  dms_reform_msg.h  dms_reform_preempt.c  dms_reform_preempt.h  dms_reform_proc.c  dms_reform_proc.h  dms_reform_proc_parallel.c  dms_reform_proc_parallel.h  dms_reform_proc_stat.c  dms_reform_proc_stat.h  dms_reform_validate.c  dms_reform_xa.c  dms_reform_xa.h
